2011-08-03  Mark Pilgrim  <pilgrim@chromium.org>

        Remove LegacyDefaultOptionalArguments flag from navigator IDL files
        https://bugs.webkit.org/show_bug.cgi?id=65370

        Reviewed by Adam Barth.

        * page/Navigator.idl:
        * page/NavigatorUserMediaErrorCallback.idl:
        * page/NavigatorUserMediaSuccessCallback.idl:

2011-08-03  Anders Carlsson  <andersca@apple.com>

        webarchive/loading/missing-data.html is failing on Mac
        https://bugs.webkit.org/show_bug.cgi?id=63507

        Reviewed by Adam Barth.

        When loading a main resource from a web archive, make sure that the working URL is actually
        the URL of the resource, and not the URL of the web archive itself.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::receivedFirstData):

2011-08-03  Mark Pilgrim  <pilgrim@chromium.org>

        Remove LegacyDefaultOptionalArguments flag from DOMWindow.idl
        https://bugs.webkit.org/show_bug.cgi?id=65353

        Reviewed by Adam Barth.

        No new tests, all existing tests pass.

        * bindings/scripts/CodeGeneratorJS.pm:
        (GenerateImplementation):
        * bindings/scripts/CodeGeneratorV8.pm:
        (GenerateFunctionCallback):
        * page/DOMWindow.idl:

2011-08-03  Jeff Miller  <jeffm@apple.com>

        Fix Chromimum and Qt builds after r92308.

        * config.h: Don't try to include WebCoreHeaderDetection.h for Chromimum and Qt.

2011-08-03  Jeff Miller  <jeffm@apple.com>

        Generate WebCoreHeaderDetection.h on Windows to define HAVE_AVCF
        https://bugs.webkit.org/show_bug.cgi?id=65634
        
        AVFoundation support on Windows will (eventually) be predicated on the
        availability of AVFoundationCF headers and libraries in the WebKit Support
        Libraries, so we test for the existence of one of the header files (AVCFBase.h)
        to determine whether to AVCF is available.
        